Fixing skippable logic in Dashboard, Historico and Carteira and Dark mode in Dashboard

--- a/SGDB/public/pages/css/Dashboard.css
+++ b/SGDB/public/pages/css/Dashboard.css
@@ -173,7 +173,7 @@ span {
 }
 
 .dark-mode .register-id{
-    background: #0b121a;
+    background: #0d1721;
     color: rgb(144, 161, 191);
 }
 
